--- a/src/main/resources/templates/welcome.html
+++ b/src/main/resources/templates/welcome.html
@@ -23,7 +23,7 @@
 	<li><a th:href="@{/level2/3}">梯云纵</a></li>
 </ul>
 
-<h3>绝世武功秘籍</h3>
+<h3>超级绝世武功秘籍</h3>
 <ul>
 	<li><a th:href="@{/level3/1}">葵花宝典</a></li>
 	<li><a th:href="@{/level3/2}">龟派气功</a></li>
